# kidotel-radar

./: .gitignore  CHANGELOG.md  MASTER.md  README.md  index.html  package.json  pnpm-lock.yaml
.claude/: launch.json
.github/workflows/: build.yml
docs/: ARCHITETTURA.md  AUDIT-2026-07.md  BRAND.md  COWORK-AI-SCORING.md  DECISIONI.md  JOIN-SITE.md  MCP-COWORK.md  ROADMAP.md  STATO.md  reviews-sample.json
mcp-server/: Cargo.toml
mcp-server/src/: main.rs
presentazione/: kidotel-genitori.html  kidotel-hotel.html  kidotel-nota-tecnica-kidotelco.html  kidotel-nota-tecnica-kidotelcom.html  kidotel-piano-operativo.html  kidotel-radar-presentation-ru.html  kidotel-radar-presentation.html
scripts/: .complete-done.json  affiliate.config.json  backfill-geo.py  backfill-stars.mjs  backup-db.mjs  build-signals.mjs  build-site.mjs  capture-manual.mjs  complete-countries.mjs  flag-chains.mjs  harvest-emails.mjs  harvest-site.mjs  make-icon.mjs  match-all.mjs  match-site.mjs  release.mjs  score-all-ai.mjs  score-batch.mjs  score-free.mjs  verify-completa.mjs  verify-emails.mjs  world-scan.mjs
site/: index.html  robots.txt  sitemap.xml
site/assets/: site.css
site/en/: index.html
site/en/disclosure/: index.html
site/en/family-hotels/: index.html
site/it/: index.html
src/: App.css  App.tsx  guide.ts  main.tsx  version.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  engine.rs  keepawake.rs  lib.rs  main.rs  signals.json
src/components/: Icon.tsx  MapView.tsx  Wordmark.tsx
src/i18n/: index.tsx
(+238 files in other folders)
